--- a/index.html
+++ b/index.html
@@ -12,26 +12,29 @@
             <div style="height: 100%;" class="row">
                 <div style="height: 100%;" class="col-5">
                     <div class="abs-middle">
-                        <h3 class="login-text">سیستم مدیریت حواله های تفاله خشک</h3>
+                        <h5 class="login-text">سیستم مدیریت حواله های تفاله خشک</h5>
                     </div>
                 </div>
                 <div style="height: 100%;" class="col-7">
                     <form id="loginform" class="abs-middle login-form">
                         <div class="row">
-                            <div style="height: 100%;" class="col-12">
-                                <div class="form-group">
+                            <div style="height: 100%;" class="col-10">
+                                <div class="form-group login-form-group">
                                     <input type="text" name="username" id="username" placeholder="نام کاربری" class="form-control login-input">
-                                    <label for="username" class="login-label">لطفا نام کاربری را وارد نمایید</label>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group login-form-group">
                                     <input type="password" name="password" id="password" placeholder="کلمه عبور" class="form-control login-input">
-                                    <label for="password" class="login-label">لطفا کلمه عبور را وارد نمایید</label>
                                 </div>
-                                <div class="form-group">
+                            </div>
+                            <div class="col-2" style="padding: 0 5px;">
+                                <div class="form-group login-form-group-btn">
                                     <button type="submit" class="btn login-btn">ورود</button>
                                 </div>
                             </div>
                         </div>
+                        <ul class="error-list">
+                            <li>نام کاربری یا کلمه عبور صحیح نمی باشد.</li>
+                        </ul>
                     </form>
                 </div>
             </div>
