--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>سیستم مدیریت حواله های چغندرکاران</title>
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="assets/css/main.css">
-        <script src="index.js"></script>
+        <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <script src="../javascript/connection.js"></script>
+        <script src="../javascript/index.js"></script>
     </head>
     <body>
         <div style="height: 100%;" class="container">
