--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -8,7 +8,7 @@
         <script src="../javascript/connection.js"></script>
         <script src="../javascript/index.js"></script>
     </head>
-    <body>
+    <body style="overflow: hidden;">
         <div style="height: 100%;" class="container">
             <div style="height: 100%;" class="row">
                 <div style="height: 100%;" class="col-5">
