--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -9,7 +9,7 @@
         <script src="../javascript/index.js"></script>
     </head>
     <body style="overflow: hidden;">
-        <div style="height: 100%;" class="container">
+        <div style="height: 100%;overflow: hidden;" class="container">
             <div style="height: 100%;" class="row">
                 <div style="height: 100%;" class="col-5">
                     <div class="abs-middle">
