--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="../css/main.css">
         <script src="../javascript/connection.js"></script>
-        <script src="../javascript/index.js"></script>
+        <script src="../javascript/login.js"></script>
     </head>
     <body style="overflow: hidden;">
         <div style="height: 100%;overflow: hidden;" class="container">
