--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -5,6 +5,7 @@
         <title>سیستم مدیریت حواله های چغندرکاران</title>
         <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/login.css">
         <script src="../javascript/connection.js"></script>
         <script src="../javascript/login.js"></script>
     </head>
