--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -10,11 +10,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="row" style="height: 8%;background: red;">
+        <div class="row" style="height: 10%">
+            <header>
+                <p class="username">سعید عزیزی آذر</p>
+            </header>
         </div>
-        <div class="row" style="height: 84%;background-color: gray;">
+        <div class="row" style="height: 82%">
+            <div class="col-5" style="padding: 15px;">
+                <div class="customers"></div>
+            </div>
+            <div class="col-7" style="padding: 15px;">
+                <div class="orders"></div>
+            </div>
         </div>
-        <div class="row" style="height: 8%;background-color: blanchedalmond;">
+        <div class="row" style="height: 8%">
+            <footer></footer>
         </div>
     </div>
 </body>
