--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/home.css">
+    <script src="../javascript/connection.js"></script>
+    <script src="../javascript/customers.js"></script>
     <title>سیستم مدیریت حواله های چغندرکاران</title>
 </head>
 <body>
@@ -16,8 +18,9 @@
             </header>
         </div>
         <div class="row" style="height: 82%">
-            <div class="col-5" style="padding: 15px;">
-                <div class="customers"></div>
+            <div class="col-5" style="padding: 15px;height: 100%;">
+                <div class="customers" style="height: 100%;">
+                </div>
             </div>
             <div class="col-7" style="padding: 15px;">
                 <div class="orders"></div>
