--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/home.css">
     <script src="../javascript/connection.js"></script>
-    <!-- <script src="../javascript/customers.js"></script> -->
+    <script src="../javascript/customers.js"></script>
     <title>سیستم مدیریت حواله های چغندرکاران</title>
 </head>
 <body>
@@ -17,20 +17,11 @@
                 <p class="username">سعید عزیزی آذر</p>
             </header>
         </div>
-        <div class="row" style="height: 82%">
+        <div class="row" style="height: 82%;">
             <div class="col-5" style="padding: 15px;height: 100%;">
                 <div class="customers" style="height: 100%;">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <p>asaas</p>
-                            <div>asasass</div>
-                        </li>
-                        <li class="list-group-item">dssdsd</li>
-                        <li class="list-group-item">fgfgfgfg</li>
-                    </ul>
+                    <div class="edit-customer"></div>
                 </div>
-                <!-- <div class="" style="height: 100%;">
-                </div> -->
             </div>
             <div class="col-7" style="padding: 15px;">
                 <div class="orders"></div>
