--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -20,7 +20,32 @@
         <div class="row" style="height: 82%;">
             <div class="col-5" style="padding: 15px;height: 100%;">
                 <div class="customers" style="height: 100%;">
-                    <div class="edit-customer"></div>
+                    <div class="edit-customer">
+                        <form action="" class="customer-form">
+                            <div class="form-group">
+                                <input type="text" name="firstname" id="firstname" class="form-input" placeholder="نام مشتری">
+                                <label for="firstname">نام مشتری</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="lastname" id="lastname" class="form-input" placeholder="نام خانوادگی">
+                                <label for="lastname">نام خانوادگی</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="number" id="number" class="form-input" placeholder="شماره تماس">
+                                <label for="number">شماره تماس</label>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="text" name="address" id="address" class="form-input" placeholder="آدرس">
+                                <label for="number">آدرس</label>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="text" name="describe" id="describe" class="form-input" placeholder="توضیحات">
+                                <label for="number">توضیحات</label>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
             <div class="col-7" style="padding: 15px;">
