--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -25,15 +25,15 @@
                         <form action="" class="customer-form">
                             <h5>مشتری جدید</h5>
                             <div class="form-group">
-                                <input type="text" name="firstname" id="firstname" class="form-input" placeholder="نام مشتری">
+                                <input type="text" name="firstname" id="firstname" class="form-input" placeholder="نام مشتری" required>
                                 <label for="firstname">نام مشتری</label>
                             </div>
                             <div class="form-group">
-                                <input type="text" name="lastname" id="lastname" class="form-input" placeholder="نام خانوادگی">
+                                <input type="text" name="lastname" id="lastname" class="form-input" placeholder="نام خانوادگی" required>
                                 <label for="lastname">نام خانوادگی</label>
                             </div>
                             <div class="form-group">
-                                <input type="text" name="number" id="number" class="form-input" placeholder="شماره تماس">
+                                <input type="text" name="number" id="number" class="form-input" placeholder="شماره تماس" required pattern="[0][9][0-9]{9}">
                                 <label for="number">شماره تماس</label>
                             </div>
 
