--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -23,7 +23,10 @@
                 <div class="customers" style="height: 100%;">
                     <div class="edit-customer">
                         <form action="" class="customer-form">
-                            <h5>مشتری جدید</h5>
+                            <div class="header">
+                                <h5>مشتری جدید</h5>
+                                <img src="../icons/trash.svg" alt="">
+                            </div>
                             <div class="form-group">
                                 <input type="text" name="firstname" id="firstname" class="form-input" placeholder="نام مشتری" required>
                                 <label for="firstname">نام مشتری</label>
