--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="delete-customer-confirmation"></div>
         <div class="row" style="height: 10%">
             <header>
                 <p class="username">سعید عزیزی آذر</p>
@@ -90,6 +91,7 @@
                             </div>
                         </form>
                     </div>
+                    <div class="add-btn"></div>
                 </div>
             </div>
             <div class="col-7" style="padding: 15px;">
