--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -12,8 +12,22 @@
     <title>سیستم مدیریت حواله های چغندرکاران</title>
 </head>
 <body>
+    <div class="popup" id="deleteconfirm">
+        <div class="popup-box">
+            <div class="popup-box-title">
+                <h5 style="margin: 0;">حذف مشتری : عباس معماری</h5>
+            </div>
+            <div class="popup-box-content">
+                <p>آیا از حذف کردن این مورد مطمئن هستید ؟</p>
+            </div>
+            <div class="popup-box-footer">
+                <button class="button button-primary" onclick="customerDelete()">تایید</button>
+                <button class="button button-secondary" id="cancel-delete-customer-popup">انصراف</button>
+            </div>
+        </div>
+    </div>
     <div class="container">
-        <div class="delete-customer-confirmation"></div>
+        
         <div class="row" style="height: 10%">
             <header>
                 <p class="username">سعید عزیزی آذر</p>
@@ -60,7 +74,7 @@
                         <form action="" class="customer-form-edit">
                             <div class="header">
                                 <h5>ویرایش مشتری</h5>
-                                <img src="../icons/trash.svg" alt="">
+                                <img src="../icons/trash.svg" alt="" style="padding: 15px;">
                             </div>
                             <div class="form-group">
                                 <input type="text" name="editfirstname" id="editfirstname" class="form-input" placeholder="نام مشتری" required>
