--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -15,7 +15,7 @@
     <div class="popup" id="deleteconfirm">
         <div class="popup-box">
             <div class="popup-box-title">
-                <h5 style="margin: 0;">حذف مشتری : عباس معماری</h5>
+                <h5 style="margin: 0;">حذف مشتری</h5>
             </div>
             <div class="popup-box-content">
                 <p>آیا از حذف کردن این مورد مطمئن هستید ؟</p>
