--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/component.css">
     <script src="../javascript/connection.js"></script>
     <script src="../javascript/customers.js"></script>
+    <script type="module" src="../javascript/orders.js"></script>
     <title>سیستم مدیریت حواله های چغندرکاران</title>
 </head>
 <body>
