--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -41,7 +41,6 @@
                         <form action="" class="customer-form">
                             <div class="header">
                                 <h5>مشتری جدید</h5>
-                                <!-- <img src="../icons/trash.svg" alt=""> -->
                             </div>
                             <div class="form-group">
                                 <input type="text" name="firstname" id="firstname" class="form-input" placeholder="نام مشتری" required>
@@ -110,7 +109,17 @@
                 </div>
             </div>
             <div class="col-7" style="padding: 15px;">
-                <div class="orders"></div>
+                <div class="orders">
+                    <div class="new-order">
+                        <form action="" class="add-orders">
+                            <div class="form-group">
+                                <input type="text" name="add-order" id="add-order-input" class="form-input" placeholder="شماره حواله">
+                                <label for="editaddress">شماره حواله</label>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="add-btn"></div>
+                </div>
             </div>
         </div>
         <div class="row" style="height: 8%">
