--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -114,9 +114,21 @@
                         <form action="" class="add-orders">
                             <div class="form-group">
                                 <input type="text" name="add-order" id="add-order-input" class="form-input" placeholder="شماره حواله">
-                                <label for="editaddress">شماره حواله</label>
+                                <label for="add-order-input">شماره حواله</label>
                             </div>
                         </form>
+                        <div class="added-orders">
+                            <div class="added-orders-sum">
+                                <div id="sum"></div>
+                                <div id="actionbtns">
+                                    <input type="button" name="confirm" id="confirm" value="ثبت" class="button button-primary">
+                                    <input type="button" name="deleteall" value="حذف همه" class="button button-secondary" style="margin-right: 10px;">
+                                </div>
+                            </div>
+                            <div class="added-orders-list">
+                                <ul></ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="add-btn"></div>
                 </div>
