--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -110,6 +110,21 @@
             </div>
             <div class="col-7" style="padding: 15px;">
                 <div class="orders">
+                    <div class="orders-list">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td style="width:10%">ردیف</th>
+                                    <td style="width:20%">تاریخ</td>
+                                    <td style="width:20%">ورودی</td>
+                                    <td style="width:20%">خروجی</td>
+                                    <td style="width:30%">توضیحات</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                     <div class="new-order">
                         <form action="" class="add-orders">
                             <div class="form-group">
